[package]
name = "capster"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
captcha-rs = "0.2.11"
tokio = { version = "1", features = ["full"] }
figment = { version = "0.10.19", features = ["env", 'toml', 'serde_json'] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
dotenvy = "0.15.7"
deadpool-redis = "0.21.1"
redis = { version = "0.32.0", features = ["tokio-comp", "r2d2", "connection-manager"] }
async-trait = "0.1.88"
redb = "2.6.0"
tracing = { version = "0.1.41", features = ["default"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "default"] }
uuid = { version = "1.17.0", features = ["v8", "v4", "zerocopy"] }