[package]
name = "capster"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4" }
captcha-rs = "0.2.11"
tokio = { version = "1", features = ["full"] }
figment = { version = "0.10.19", features = ["env", 'toml', 'serde_json'] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
dotenvy = "0.15.7"
redis = { version = "0.32.0", features = ["tokio-comp", "r2d2", "connection-manager", 'aio'] }
async-trait = "0.1.88"
tracing = { version = "0.1.41", features = ["default"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "default"] }
uuid = { version = "1.17.0", features = ["v7", "v4", "zerocopy"] }
moka = { version = "0.12", features = ["future", 'event-listener', 'log'] }
rand = { version = "0.9" }
utoipa = { version = "5", features = ["axum_extras", "debug"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
utoipa-axum = { version = "0.2", features = ["debug"] }
image = "0.24.9"
axum-prometheus = "0.8"
metrics-exporter-prometheus = "0.17"
minijinja = { version = "2", features = ["builtins"] }
minijinja-embed = "2"

[profile.release]
strip = "symbols"